fix: location dropdown click area fixed

--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -51,7 +51,7 @@
                                          class="absolute z-30 hidden w-full p-4 pt-8 overflow-hidden bg-white border-2 top-1/2 rounded-b-3xl drop-shadow-md h-72">
                                         <div class="h-full overflow-auto">
                                             {% for airport in airports %}
-                                                <div class="my-2 text-sm text-text airport-list-item">{{ airport }}</div>
+                                                <div class="py-2 text-sm text-text airport-list-item">{{ airport }}</div>
                                                 <hr>
                                             {% endfor %}
                                         </div>
@@ -67,7 +67,7 @@
                                          class="absolute z-10 hidden w-full p-4 pt-8 overflow-hidden bg-white border-2 top-1/2 rounded-b-3xl drop-shadow-md h-72">
                                         <div class="h-full overflow-auto">
                                             {% for airport in airports %}
-                                                <div class="my-2 text-sm text-text airport-list-item">{{ airport }}</div>
+                                                <div class="py-2 text-sm text-text airport-list-item">{{ airport }}</div>
                                                 <hr>
                                             {% endfor %}
                                         </div>
