--- a/templates/core/passenger-details.html
+++ b/templates/core/passenger-details.html
@@ -1,4 +1,5 @@
 {% extends 'base/base.html' %}
+{% load static %}
 {% block content %}
     <div class="container px-5 py-8 mx-auto">
         <h1 class="text-3xl font-bold text-text">Passenger Details</h1>
@@ -9,33 +10,41 @@
                 <div class="w-full p-8 mt-8 bg-white shadow-lg rounded-3xl">
                     <p class="text-2xl font-bold text-text">Passenger {{ passenger }}</p>
                     <p class="text-text">We need these details to confirm your identity - please make sure they match your passport.</p>
-                    <div class="flex gap-4 mt-4">
+                    <div class="grid grid-cols-1 gap-4 mt-4 sm:grid-cols-2">
                         <input type="text"
                                name="passenger-{{ passenger }}-first"
                                placeholder="First name"
-                               class="h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0 flex-1">
-                        <input type="text"
+                               class="h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0 flex-1"
+                               required>
+                       <input type="text"
                                name="passenger-{{ passenger }}-last"
                                placeholder="Last name"
-                               class="h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0 flex-1">
+                               class="h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0 flex-1" required>
                     </div>
                 </div>
             {% endfor %}
-            <div class="w-full p-8 mt-8 bg-white shadow-lg rounded-3xl">
+            <div class="w-full p-8 mt-8 bg-white shadow-lg rounded-3xl ">
                 <p class="text-2xl font-bold text-text">Trip Contact</p>
                 <p class="text-text">We need your email address to keep you updated about your trip.</p>
-                <div class="flex gap-4 mt-4">
+                <div class="grid grid-cols-1 gap-4 mt-4 sm:grid-cols-2">
                     <input type="email"
                            name="trip-email"
                            placeholder="Email"
-                           class="h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0 flex-1">
+                           class="h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0 flex-1" required>
                     <input type="email"
                            name="trip-email2"
                            placeholder="Confirm email"
-                           class="h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0 flex-1">
+                           class="h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0 flex-1" required>
                 </div>
             </div>
-            <button type="submit">submit</button>
+            {% comment %} <button type="submit">submit</button> {% endcomment %}
+            <div class="flex justify-end my-8">
+                <button id="submit" type="submit"
+                        class="w-full px-6 py-4 font-bold text-white rounded-full sm:w-auto sm: bg-primary disabled:bg-gray-500">Review & Pay</button>
+            </div>
         </form>
     </div>
 {% endblock content %}
+{% block scripts %}
+<script src="{% static 'js/passenger-details.js' %}"></script>
+{% endblock scripts %}
