feat: implment Bookings page

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -60,7 +60,7 @@
                     <div class="absolute items-center justify-center hidden -translate-x-1/2 left-1/2 md:flex">
                         <ul class="flex">
                             <li>
-                                <a href="#" class="px-4 text-white">Bookings</a>
+                                <a href="{% url 'bookings' %}" class="px-4 text-white">Bookings</a>
                             </li>
                             <li>
                                 <a href="#" class="text-white px-4 border-x-[1px]">Blog</a>
