feat: implement booking passenger edit feat

--- a/templates/core/bookings.html
+++ b/templates/core/bookings.html
@@ -44,7 +44,7 @@
                     {% endif %}
                 </td>
                 <td class="px-3 py-4 sm:px-6">
-                    <a href="{% url 'bookings-edit' booking_id=booking.id %}" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                    <a href="{% url 'bookings-detail' booking_id=booking.id %}" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
                 </td>
             </tr>
             {% endfor %}
