--- a/templates/core/bookings-detail.html
+++ b/templates/core/bookings-detail.html
@@ -3,7 +3,6 @@
 {% block content %}
     <div id="container"
          class="container relative items-center h-full px-5 mx-auto my-12"
-         hx-confirm=""
          hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
         <div class="flex items-center justify-between">
             <div>
@@ -11,7 +10,9 @@
                 <p class="font-bold sm:text-xl text-md text-text">Reference: {{ booking.get_shorthand }}</p>
             </div>
             <button hx-swap=""
-                    hx-delete="/bookings/edit/{{ booking.id }}"
+                    hx-confirm=""
+                    hx-delete="/bookings/detail/{{ booking.id }}"
+                    id="cancel-booking"
                     class="flex items-center h-12 p-3 text-center  border-[1px] rounded-full border-primary">
                 Cancel Booking
             </button>
@@ -43,11 +44,18 @@
                 </div>
             </div>
         </div>
-        <div>
-            <p class="text-lg font-bold text-primary">Passengers</p>
-            <ol class="list-decimal">
-            {% for passenger in passengers %}<li class="list-inside">{{ passenger }}</li>{% endfor %}
-        </ol>
+        <div hx-target="this" hx-swap="outerHTML" class="w-[400px]">
+            <div class="flex items-center justify-between">
+                <p class="text-lg font-bold text-primary">Passengers</p>
+                <button class="rounded-full py-2 px-4 border-[1px] border-primary"
+                        hx-get="/bookings/detail/edit/{{ booking.id }}">Edit Passengers</button>
+            </div>
+            <ol class="list-decimal w-[400px]">
+                {% for passenger in passengers %}
+                    <li class="py-2 list-inside">{{ passenger }}</li>
+                    <hr class="border-gray-200">
+                {% endfor %}
+            </ol>
         </div>
     </div>
 {% endblock content %}
