--- a/templates/partials/flights.html
+++ b/templates/partials/flights.html
@@ -8,18 +8,18 @@
         {% for dateitem in slider_date_list %}
             {% if dateitem == date %}
                 <div class="flex items-center justify-center h-full bg-white rounded-full shadow-md">
-                    <div class="text-2xl font-bold text-center altDate"
+                    <div class="text-2xl font-bold text-center text-primary altDate"
                          id="{{ date|date:'Y-m-d' }}">{{ date|date:'j M' }}</div>
                     {% comment %} <div class="text-xl text-center">€{{ lowest_price|floatformat:'0' }}</div> {% endcomment %}
                 </div>
             {% else %}
-                <div class=""
+                <div class="cursor-pointer"
                      hx-trigger="click"
                      hx-get="alt_dates/?date={{ dateitem|date:'Y-m-d' }}&origin={{ origin }}&destination={{ destination }}&leg={{ leg }}"
                      hx-swap="outerHTML"
                      hx-indicator="#indicator-{{leg}}"
                      hx-target="#{{ leg }}-flights">
-                    <div class="text-xl text-center altDate" id="{{ dateitem|date:'Y-m-d' }}">{{ dateitem|date:'j M' }}</div>
+                    <div class="text-lg font-semibold text-center altDate" id="{{ dateitem|date:'Y-m-d' }}">{{ dateitem|date:'j M' }}</div>
                     {% comment %} <div class="text-3xl text-center">€{{ lowest_price|floatformat:'0' }}</div> {% endcomment %}
                 </div>
             {% endif %}
@@ -38,7 +38,7 @@
             <!-- SHOW AVAILABLE FLIGHTS -->
             <div class="flight-card-container flex mt-6 rounded-t-[4.5rem] rounded-b-[4.5rem] flex-wrap flex-col bg-white transition-all duration-500">
                 <!-- FLIGHT DETAILS CARD -->
-                <div data-selected-{{ leg }}="False" data-flight-leg="{{ leg }}" data-flight-date="{{ flight.outbound_date|date:'j M Y' }}" data-flight-origin="{{ flight.origin }}" data-flight-destination="{{ flight.destination }}" data-flight-deptime="{{ flight.dep_time|time:'H:i' }}" data-flight-arrtime="{{ flight.arr_time|time:'H:i' }}" data-price-standard="{{ flight.standard_fare }}" data-price-plus="{{ flight.plus_fare }}" data-price-premium="{{ flight.premium_fare }}" class="flex flex-col items-center justify-between w-full bg-white border-2 flight-details-card flex-0 drop-shadow-md h-52 sm:h-36 border-primary sm:rounded-full sm:flex-row sm:pl-8 md:pl-16 rounded-3xl overflow-clip" id="{{ flight.flight_number }}">
+                <div data-selected-{{ leg }}="False" data-flight-leg="{{ leg }}" data-flight-date="{{ flight.outbound_date|date:'j M Y' }}" data-flight-origin="{{ flight.origin }}" data-flight-destination="{{ flight.destination }}" data-flight-deptime="{{ flight.dep_time|time:'H:i' }}" data-flight-arrtime="{{ flight.arr_time|time:'H:i' }}" data-price-standard="{{ flight.standard_fare }}" data-price-plus="{{ flight.plus_fare }}" data-price-premium="{{ flight.premium_fare }}" class="flex flex-col items-center justify-between w-full bg-white border-2 cursor-pointer flight-details-card flex-0 drop-shadow-md h-52 sm:h-36 border-primary sm:rounded-full sm:flex-row sm:pl-8 md:pl-16 rounded-3xl overflow-clip" id="{{ flight.flight_number }}">
                     <div class="flex items-center justify-between p-4">
                         <div>
                             <div class="text-xs font-semibold md:text-md text-text">{{ flight.origin }}</div>
