--- a/templates/partials/flights.html
+++ b/templates/partials/flights.html
@@ -34,6 +34,12 @@
             </svg>
             <span class="sr-only">Loading...</span>
         </div>
+        {% if not flight_results %}
+        <div class="flex flex-col justify-center text-center border-[1px] border-gray-300 rounded-3xl px-8 py-16 mt-6">
+            <p class="text-2xl font-bold text-primary">Oops!</p>
+                <p class="text-lg font-semibold text-text">Looks like there's no flights on that date. Please pick another date.</p>
+        </div>
+        {% endif %}
         {% for flight in flight_results %}
             <!-- SHOW AVAILABLE FLIGHTS -->
             <div class="flight-card-container flex mt-6 rounded-t-[4.5rem] rounded-b-[4.5rem] flex-wrap flex-col bg-white transition-all duration-500">
