--- a/templates/core/bookings-detail.html
+++ b/templates/core/bookings-detail.html
@@ -31,6 +31,7 @@
                 </div>
             </div>
         </div>
+        {% if booking.return_flight %}
         <div class="mb-4">
             <p class="mb-2 font-bold text-md text-primary">Return</p>
             <div class="flex flex-col w-full p-8 bg-white shadow-lg md:flex-row ">
@@ -44,6 +45,7 @@
                 </div>
             </div>
         </div>
+        {% endif %}
         <div hx-target="this" hx-swap="outerHTML" class="w-[400px]">
             <div class="flex items-center justify-between">
                 <p class="text-lg font-bold text-primary">Passengers</p>
