--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -5,13 +5,14 @@
     <div class="w-screen h-full bg-gray-100">
         <!-- OVERALL CONTAINER -->
         <div class="container relative h-full px-5 pt-16 mx-auto">
-            <div class="mb-12">
+            <div class="relative z-50 mb-12">
                 <h1 class="text-3xl font-bold text-center text-text">Book a flight</h1>
                 <p class="text-lg text-center text-text">We can bring you anywhere!*</p>
                 <p class="mt-6 text-xs text-center text-text">*almost</p>
             </div>
+            <div class="relative"><img class="absolute bottom-0" src="/static/img/planes-home.svg" alt=""></div>            
             <!-- OUTER CONTAINER FOR FORM -->
-            <div class="container flex items-center h-auto p-8 mx-auto bg-white rounded-3xl drop-shadow-lg">
+            <div class="container relative flex items-center h-auto p-8 mx-auto bg-white rounded-3xl drop-shadow-lg">
                 <!-- FORM CONTRAINER -->
                 <div class="container mx-auto">
                     <form action="{% url 'search-results' %}" method="get" autocomplete="off">
